force-app/main/default/objects/Monthly_Usage__c/Monthly_Usage__c.object-meta.xml
<CustomObject>
    <description>Monthly usage.</description>
    <label>Monthly Usage</label>
    <nameField>
        <displayFormat>Usage-{0}</displayFormat>
        <label>Monthly Usage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>