force-app/main/default/objects/Monthly_Usage__c/fields/Allow_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_Last_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trigger will set this to true if an external update was made to this record.  validation rule is set up to check this field with other criteria for restricting record changes on invoiced usage.</description>
    <label>Allow Last Update</label>
    <type>Checkbox</type>
</CustomField>