force-app/main/default/objects/Monthly_Usage__c/fields/APA__c.field-meta.xml
<CustomField>
    <fullName>APA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which account premise association the usage is linked to</description>
    <inlineHelpText>Which account premise association the usage is linked to</inlineHelpText>
    <label>APA</label>
    <referenceTo>AccountPremiseAssociation__c</referenceTo>
    <relationshipLabel>Monthly Usage</relationshipLabel>
    <relationshipName>Monthly_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>