force-app/main/default/objects/Monthly_Usage__c/fields/Base_Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Base_Contract_Volume__c</fullName>
    <label>Base Contract Volume</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>