force-app/main/default/objects/Monthly_Usage__c/fields/CES_Contract__c.field-meta.xml
<CustomField>
    <fullName>CES_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Monthly Usage</relationshipLabel>
    <relationshipName>Monthly_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>