force-app/main/default/objects/Monthly_Usage__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>End date for monthly usage.</description>
    <inlineHelpText>End date for monthly usage.</inlineHelpText>
    <label>End date</label>
    <type>Date</type>
</CustomField>