force-app/main/default/objects/Monthly_Usage__c/fields/Estimated__c.field-meta.xml
<CustomField>
    <fullName>Estimated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This value is estimated by TrueCost and is not from an external system</description>
    <inlineHelpText>This value is estimated by TrueCost and is not from an external system</inlineHelpText>
    <label>Estimated</label>
    <type>Checkbox</type>
</CustomField>