force-app/main/default/objects/Monthly_Usage__c/fields/External_Update__c.field-meta.xml
<CustomField>
    <fullName>External_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set this to true when an external system is updating this record.  a trigger will set the record up to pass validations</description>
    <label>External Update</label>
    <type>Checkbox</type>
</CustomField>