force-app/main/default/objects/Monthly_Usage__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced by Safari</label>
    <type>Checkbox</type>
</CustomField>