force-app/main/default/objects/Monthly_Usage__c/fields/Is_Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field:  Is this volume associated with a contract?  Used for clean up of orphans.</description>
    <inlineHelpText>System field:  Is this volume associated with a contract?</inlineHelpText>
    <label>Is Contract Volume</label>
    <type>Checkbox</type>
</CustomField>