force-app/main/default/objects/Monthly_Usage__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <description>Which month this data is from (Jan=1, Dec=12)</description>
    <inlineHelpText>Which month this data is from (Jan=1, Dec=12)</inlineHelpText>
    <label>Month Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>