force-app/main/default/objects/Monthly_Usage__c/fields/MU_ID__c.field-meta.xml
<CustomField>
    <fullName>MU_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>MU ID</label>
    <type>Text</type>
</CustomField>