force-app/main/default/objects/Monthly_Usage__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Monthly Usage</relationshipLabel>
    <relationshipName>Monthly_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>