force-app/main/default/objects/Monthly_Usage__c/fields/Premise_Type__c.field-meta.xml
<CustomField>
    <fullName>Premise_Type__c</fullName>
    <formula>Premise__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Type</label>
    <type>Text</type>
</CustomField>