force-app/main/default/objects/Monthly_Usage__c/fields/Safari_Usage_Key__c.field-meta.xml
<CustomField>
    <fullName>Safari_Usage_Key__c</fullName>
    <externalId>true</externalId>
    <label>Safari Usage Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>