force-app/main/default/objects/Monthly_Usage__c/fields/Safari_Usage_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safari_Usage_Key_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Safari_Usage_Key__c ) = 0
  , NULL
  ,  MID( Safari_Usage_Key__c , FIND(&#39;-&#39;, Safari_Usage_Key__c ) + 1, LEN( Safari_Usage_Key__c ) - FIND(&#39;-&#39;, Safari_Usage_Key__c ) + 1) 
)</formula>
    <label>Safari Usage Key Formula</label>
    <type>Text</type>
</CustomField>