force-app/main/default/objects/Monthly_Usage__c/fields/Safari_Usage_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Safari_Usage_Type_ID__c</fullName>
    <formula>&#39;1&#39;</formula>
    <label>Safari Usage Type ID</label>
    <type>Text</type>
</CustomField>