force-app/main/default/objects/Monthly_Usage__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Starting date of monthly usage.</description>
    <inlineHelpText>Starting date of monthly usage.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>