force-app/main/default/objects/Monthly_Usage__c/fields/Storage_Injection__c.field-meta.xml
<CustomField>
    <fullName>Storage_Injection__c</fullName>
    <label>Storage Injection</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>