force-app/main/default/objects/Monthly_Usage__c/fields/Storage_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Storage_Withdrawal__c</fullName>
    <label>Storage Withdrawal</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>