force-app/main/default/objects/Monthly_Usage__c/fields/Swing_Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Swing_Contract_Volume__c</fullName>
    <label>Swing Contract Volume</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>