force-app/main/default/objects/Monthly_Usage__c/fields/Sync_Batch__c.field-meta.xml
<CustomField>
    <fullName>Sync_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Batch</label>
    <referenceTo>Sync_Batch__c</referenceTo>
    <relationshipLabel>Monthly Usage</relationshipLabel>
    <relationshipName>Monthly_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>