force-app/main/default/objects/Monthly_Usage__c/fields/Unique_Usage_Validation__c.field-meta.xml
<CustomField>
    <fullName>Unique_Usage_Validation__c</fullName>
    <label>Unique Usage Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>