force-app/main/default/objects/Monthly_Usage__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <description>Total kWh usage for the specified time period.</description>
    <inlineHelpText>Total kWh usage for the specified time period.</inlineHelpText>
    <label>Usage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>