force-app/main/default/objects/Monthly_Usage__c/fields/Usage_Therms__c.field-meta.xml
<CustomField>
    <fullName>Usage_Therms__c</fullName>
    <formula>Usage__c * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage (Therms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>