force-app/main/default/objects/Monthly_Usage__c/fields/Volume_for_Month__c.field-meta.xml
<CustomField>
    <fullName>Volume_for_Month__c</fullName>
    <formula>IF( NOT(ISPICKVAL( Volume_Entry_Type__c , &#39;Daily&#39;))
, Usage__c 
, Usage__c  *  
IF(
MOD(YEAR( Start_Date__c ), 4 ) = 0 
&amp;&amp; MONTH( Start_Date__c ) = 2, 
29,
CASE( MONTH( Start_Date__c ), 
1, 31, 
2, 28,
3,31,
4,30,
5,31,
6,30,
7,31,
8,31,
9,30,
10,31,
11,30,
12,31,
1) 
)
)</formula>
    <label>Volume for Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>