force-app/main/default/objects/Monthly_Usage__c/fields/Volume_for_Month_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Volume_for_Month_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( CES_Contract__r.MDQ_Unit__c , &#39;Therm&#39;)
  , Volume_for_Month__c * 10
  , Volume_for_Month__c 
)</formula>
    <label>Volume for Month for TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>