force-app/main/default/objects/Monthly_Usage__c/fields/Volume_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Volume_for_TC__c</fullName>
    <formula>IF (ISPICKVAL( Volume_Entry_Type__c , &#39;Daily&#39;)
  ,  Volume_per_Day_for_TC__c 
  ,  Volume_for_Month_for_TC__c 
)</formula>
    <label>Volume for TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>