force-app/main/default/objects/Monthly_Usage__c/validationRules/Restrict_Synchronized_Usage_Edits.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Synchronized_Usage_Edits</fullName>
    <active>false</active>
    <description>do not allow edits to usage by certain profiles if records have been synchronized with safari</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Safari_Usage_Key__c)),
 NOT(
  OR(
    CONTAINS($User.Profile_Name__c,&#39;CES Contract&#39;),
    CONTAINS($User.Profile_Name__c,&#39;CES Gas Operations&#39;),
    $User.Profile_Name__c = &#39;System Administrator&#39;,
    $User.Profile_Name__c = &#39;The System&#39;
  )
 )
)</errorConditionFormula>
    <errorMessage>MonthlyUsage02:  This usage has been synced with Safari and can only be modified by a transaction analyst. Please contact your applicable transaction analyst group.</errorMessage>
</ValidationRule>